Celestial Food tab added

--- a/src/main/resources/assets/celestialrealms/lang/en_us.json
+++ b/src/main/resources/assets/celestialrealms/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.celestialrealms.mandarin": "Mandarin"
+  "item.celestialrealms.tangerine": "Tangerine",
+  "itemGroup.celestialrealms": "Celestial Food"
 }
