--- a/src/main/resources/assets/celestialrealms/lang/en_us.json
+++ b/src/main/resources/assets/celestialrealms/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.celestialrealms.tangerine": "Tangerine",
-  "itemGroup.celestialrealms": "Celestial Food"
+  "item.celestialrealms.green_apple": "Green Apple",
+  "itemGroup.celestialrealms.food": "Celestial Food",
+  "itemGroup.celestialrealms.blocks": "Celestial Blocks",
+  "block.celestialrealms.ruby_ore": "Ruby Ore"
 }
