Added a tab with resources and a drop from Ores

--- a/src/main/resources/assets/celestialrealms/lang/en_us.json
+++ b/src/main/resources/assets/celestialrealms/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.celestialrealms.tangerine": "Tangerine",
   "item.celestialrealms.green_apple": "Green Apple",
+  "item.celestialrealms.ruby": "Ruby",
   "itemGroup.celestialrealms.food": "Celestial Food",
   "itemGroup.celestialrealms.blocks": "Celestial Blocks",
   "block.celestialrealms.ruby_ore": "Ruby Ore"
