--- a/src/main/resources/assets/celestialrealms/lang/en_us.json
+++ b/src/main/resources/assets/celestialrealms/lang/en_us.json
@@ -2,7 +2,11 @@
   "item.celestialrealms.tangerine": "Tangerine",
   "item.celestialrealms.green_apple": "Green Apple",
   "item.celestialrealms.ruby": "Ruby",
+  "item.celestialrealms.ruby_sword": "Ruby Sword",
   "itemGroup.celestialrealms.food": "Celestial Food",
   "itemGroup.celestialrealms.blocks": "Celestial Blocks",
+  "itemGroup.celestialrealms.Weapons": "Weapons",
+  "itemGroup.celestialrealms.Resources": "Resources",
   "block.celestialrealms.ruby_ore": "Ruby Ore"
+
 }
