Ruby block crafting added

--- a/src/main/resources/assets/celestialrealms/lang/en_us.json
+++ b/src/main/resources/assets/celestialrealms/lang/en_us.json
@@ -9,6 +9,6 @@
   "itemGroup.celestialrealms.Weapons": "Weapons",
   "itemGroup.celestialrealms.Resources": "Resources",
   "itemGroup.celestialrealms.Tools": "Tools",
-  "block.celestialrealms.ruby_ore": "Ruby Ore"
-
+  "block.celestialrealms.ruby_ore": "Ruby Ore",
+  "block.celestialrealms.ruby_block": "Ruby Block"
 }
